Day 68/100 commits - add endpoint for handling schedule plan
